# golang-gin-gitpod

./: .bazelrc  .gitignore  .gitpod.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.gitpod/: Dockerfile
bazel/go/: deps.bzl
bazel/rules/: deps.bzl
bazel/scripts/: stamp.bash
cmd/cobradocs/: BUILD.bazel  main.go
cmd/cobradocs/cmd/: BUILD.bazel  root.go  server.go  version.go
docs/cobradocs/: BUILD.bazel  main.go
internal/backend/: BUILD.bazel  article.go  auth.go  routes.go  user.go
internal/data/: BUILD.bazel  article.go  article_test.go  static.go  user.go  user_test.go
internal/models/v1/: BUILD.bazel  article.go  user.go
pkg/cobrago/: BUILD.bazel  storage.go
