load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "server.go",
        "version.go",
    ],
    data = ["//:templates"],
    importpath = "github.com/jrbeverly/cobra-cmd-with-docs/cmd/cobradocs/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/backend",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_spf13_cobra//:cobra",
    ],
)
